Added onResolve funtionality, making it super easy to control async dependencies.
Types are now delivered with package.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
         "rootDir": "src",
         "outDir": "dist",
         "target": "es5",
-        "lib": ["es6", "dom"]
+        "lib": ["es6", "dom"],
+        "declaration": true
     },
     "exclude": [
         "node_modules"
